# surface_multigrid_code

./: .gitignore  README.md
01_single_SSP/: CMakeLists.txt  README.md  main.cpp
02_mg_hierarchy/: README.md  main.cpp
03_mg_solver/: README.md  main.cpp
04_mg_solver_nobd/: README.md  main.cpp
05_balloon/: CMakeLists.txt
05_balloon/simulation_utils/: ElasticShell.cpp  ElasticShell.h  MaterialModel.h  MeshConnectivity.cpp  MeshConnectivity.h  MidedgeAngleSinFormulation.h  NeoHookeanMaterial.h  StVKMaterial.h  TensionFieldStVKMaterial.h  implicit_euler_mg_balloon.h  init_state.h  lumped_mass_matrix.cpp  lumped_mass_matrix.h  project_to_disk.cpp
05_balloon/simulation_utils/MaterialModel/: StVKMaterial.cpp  TensionFieldStVKMaterial.cpp
05_balloon/simulation_utils/SecondFundamentalForm/: MidedgeAngleTanFormulation.cpp  MidedgeAverageFormulation.cpp
05_example_mean_curvature_flow/: CMakeLists.txt  README.md  main.cpp
06_example_balloon_sim/: CMakeLists.txt  README.md  main.cpp
06_example_balloon_sim/sim_utils/: MidedgeAverageFormulation.h  project_to_disk.h
06_example_balloon_sim/simulation_utils/: GeometryDerivatives.cpp  GeometryDerivatives.h  MidedgeAngleTanFormulation.h  (+1 more)
06_mean_curvature_flow/: main.cpp
07_coarse_to_fine/: README.md  main.cpp
08_subdiv_remesh/: README.md  main.cpp
09_random_subdiv_remesh/: CMakeLists.txt  README.md  main.cpp
meshes/: createBadMesh.m
src/: SSP_random_collapse_edge.cpp  SSP_random_collapse_edge.h  SSP_random_midpoint.cpp  SSP_random_midpoint.h  SSP_random_qslim.cpp  SSP_random_qslim.h  joint_lscm.cpp  mg_VCycle.cpp  min_quad_with_fixed_mg.cpp  query_coarse_to_fine.cpp  query_coarse_to_fine.h
utils/: SSP_collapse_edge.cpp  SSP_decimate.cpp  get_prolong.cpp  get_prolong.h  mg_VCycle.cpp  mg_precompute.cpp  mg_precompute.h  min_quad_with_fixed_mg.cpp  mqwf_dense_data.h  normalize_unit_area.cpp
(+4 files in other folders)
